add documentation for the directives and sample rendering

--- a/doc/plugins/admonition.mdwn
+++ b/doc/plugins/admonition.mdwn
@@ -32,6 +32,18 @@ style. So the above can also be simply written as:
     <div class="caution">In id erat non orci commodo lobortis.</div>
     <div class="warning">Phasellus neque orci, porta a, aliquet quis, semper a, massa.</div>
 
+Which will render as:
+
+<div class="tip">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</div>
+<div class="note">Vivamus id enim.</div>
+<div class="important">In id erat non orci commodo lobortis.</div>
+<div class="caution">In id erat non orci commodo lobortis.</div>
+<div class="warning">Phasellus neque orci, porta a, aliquet quis, semper a, massa.</div>
+
+The admonition plugin does not need to be enabled for the `<div>` to
+render properly. The plugin only enables the directive shortcuts, the
+CSS and icons are always available.
+
 # Rationale
 
 The idea behind the directives is to make the the CSS elements easier
@@ -39,18 +51,3 @@ to discover through the builtin documentation. Obviously, more
 admonitions can be created simply by adding similar icons and CSS
 elements. Of course, you will not get the above directives expanded
 automatically unless you patch the admonition plugin, unfortunately.
-
-# Code
-
-[[!template id=gitbranch branch=anarcat/admonitions author="[[anarcat]]"]]
-
-The [[!taglink patch]] is available from
-[anarcat's "admonition" branch][] and is designed to be merged in
-Ikiwiki directly:
-
-    git clone -b admonitions git://src.anarc.at/ikiwiki.git
-
-[anarcat's "admonition" branch]: http://src.anarc.at/ikiwiki.git/shortlog/refs/heads/admonitions
-
-See also [[todo/admonitions]] for the discussion leading to the
-creation of this plugin.
