--- a/doc/plugins/admonition.mdwn
+++ b/doc/plugins/admonition.mdwn
@@ -48,10 +48,14 @@ would be silly.</div>
 Also:
 
 <span/><div class="caution">Note that markup does not work inside
-directives. For that, use the DIV tag directly. Keep in mind that
-Markdown has some quirks as to parsing markup inside HTML blocks: it
-needs to think that it is a "span" element, so you can prefix your
-`<div>` with a `<span/>` element to force it to be parsed.</div>
+directives. You can use the `<div>` tag directly instead, but keep in
+mind that Markdown has some quirks regarding how it parses markup
+inside HTML: it needs to think that it is a "span" element for markup
+to be parsed. You can trick the parser by prefixing your `<div>` with
+a `<span/>` or `&nbsp;` element to force it to be parsed.</div>
+
+<div class="tip">[[!format mdwn """Another workaround is to use the
+[[ikiwiki/directive/format]] directive directly inside the div."""]]</div>
 
 And finally:
 
