--- a/doc/plugins/admonition.mdwn
+++ b/doc/plugins/admonition.mdwn
@@ -47,17 +47,24 @@ would be silly.</div>
 
 Also:
 
-<span/><div class="caution">Note that markup does not work inside
-directives. You can use the `<div>` tag directly instead, but keep in
-mind that Markdown has some quirks regarding how it parses markup
-inside HTML: it needs to think that it is a "span" element for markup
-to be parsed. You can trick the parser by prefixing your `<div>` with
-a `<span/>` or `&nbsp;` element to force it to be parsed.</div>
+<span/><div class="caution">You can use the `<div>` tag directly
+instead, but keep in mind that Markdown has some quirks regarding how
+it parses markup inside HTML: it needs to think that it is a "span"
+element for markup to be parsed. You can trick the parser by prefixing
+your `<div>` with a `<span/>` or `&nbsp;` element to force it to be
+parsed. You can also use the [[ikiwiki/directive/format]] directive
+directly inside the div to format the text as Markdown (or whatever
+you wish) directly. So this should also work:
 
-<div class="tip">[[!format mdwn """Another workaround is to use the
-[[ikiwiki/directive/format]] directive directly inside the div."""]]</div>
+    <div class="tip">\[[!format "this is *great*!"]]</div>
 
-And finally:
+Markup inside the directives is of course parsed normally, so this
+also works as expected:
+
+    \[[!tip "this is *great*!"]]
+</div>
+
+And a final example:
 
 <div class="warning">Use warnings where there is a risk of bodily harm
 or data loss.</div>
